--- a/Modulo 3/Ex023/css/estilo2.css
+++ b/Modulo 3/Ex023/css/estilo2.css
@@ -6,6 +6,13 @@ table{
     width: 500px;
     border-collapse: collapse;
     margin: auto;
+    position: relative;
+}
+caption{
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 10px;
+    background-color: lightgray;
 }
 td, th{
     border: 1px solid black;
@@ -14,6 +21,14 @@ td, th{
 thead, tfoot{
     background-color: gray;
     color: white;
+}
+thead > tr > th{
+    position: sticky;
+    top: -1px;
+    background-color: black;
+}
+tbody > tr:nth-child(2n){
+    background-color: lightgray;
 }
 #item01{
     text-align: center;
