--- a/Modulo 4/Ex027/mq005/css/estilo.css
+++ b/Modulo 4/Ex027/mq005/css/estilo.css
@@ -9,7 +9,7 @@ html{
     height: 100vh;
 }
 header{
-    background-color: darkgray;
+    background-color: lightgray;
     padding: 20px;
 }
 header h1{
