--- a/Modulo 4/Ex027/mq005/css/estilo.css
+++ b/Modulo 4/Ex027/mq005/css/estilo.css
@@ -1,36 +1,61 @@
 @charset "UTF-8";
 *{
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
 }
-html{
-    width: 100vw;
-    height: 100vh;
+body, html{
+    background-color: lightgray;
 }
 header{
-    background-color: lightgray;
-    padding: 20px;
+    background-color: rgb(148, 148, 148);
 }
-header h1{
+header > h1{
     font-size: 2.3em;
     text-align: center;
     padding: 15px;
     
 }
-header li a{
+menu{
+    display: block;
+}
+menu > ul{
+    list-style-type: none;
+}
+menu > ul > li > a{
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(87, 87, 87);
     color: white;
     text-decoration: none;
+    display: block;
+    text-align: center;
+    border-top: 2px solid gray;
 }
-article{
+menu > ul > li > a:hover{
+    background-color:black;
+    color:red;
+}
+main{
+    width: 75vw;
+    background-color: white;
     margin: auto;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 10px;
+    
+}
+article > h2{
+    padding-bottom: 20px;
+}
+article > p{
     text-align: justify;
+    margin-bottom: 20px;
+    text-indent: 20px;
 }
 footer{
     text-align: center;
     color: white;
     background-color: black;
     padding: 10px;
+    
 }
